# qmaterialicons

./: CMakeLists.txt  Icon.qml  Icons.qml
